# Watermark-Remover-Suite

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST_FIXES_SUMMARY.md  codecov.yml  codex_daemon.ps1  codex_daemon.py  codex_jobs.yaml  github_upload_log.txt  project.yaml  pyproject.toml  pytest.ini  release_confirmation.json  requirements.txt  spec_1_watermark_remover_suite_mvp.md
.github/workflows/: ci.yml
assets/icons/: README.txt
backend/: __init__.py  build.py  generate_samples.py  publish_release.py  run_benchmarks.py  sign_release.py  verify_release.py
certs/: watermark_dev.pfx
cli/: main.py
config/: __init__.py  config.yaml  loader.py
core/: __init__.py  batch_manager.py  image_remover.py  logger.py  utils.py  video_remover.py
docs/: developer_guide.md  gui_overview.md  installer.md  packaging.md  performance_report.md  release_workflow.md  signing.md  simulation_assets.md  stable_diffusion.md  testing_strategy.md  user_guide.md  verification_workflow.md
installers/: watermark_remover.iss
tests/: helpers.py  test_cli.py  test_config_logging.py  test_gui.py  test_image_remover.py  test_publish.py  test_sample_generation.py  test_signing.py  test_smoke_video.py  test_utils.py  test_verify.py  test_video_remover.py  test_watermark_remover_mvp.py
tests/fixtures/: README.md  create_test_samples.py
ui/: fallback.py  main_window.py
verification_reports/: final_summary.md  release_integrity_report.md
watermark_remover/: __init__.py
watermark_remover/cli/: __init__.py  wmr.py
watermark_remover/core/: __init__.py  flow.py  inpaint_lama.py  inpaint_sd.py  pipeline.py  raft_stub.py  temporal.py
watermark_remover/models/: README.md  __init__.py  download_models.py  model_config.yaml
watermark_remover/qc/: __init__.py  metrics.py  quickcheck.py
